lx/test/fixtures/parser/invalid/break-outside-loop.lx
// Invalid: break outside of a loop
let x = 1
break
let y = 2
